--- a/multi_agents/frontend/Dockerfile
+++ b/multi_agents/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY ./package.json ./
 RUN npm install --legacy-peer-deps
 COPY . .
-RUN npm run build
+RUN npm run dev
 
 FROM nginx
 EXPOSE 3000
