Revert "Merge remote-tracking branch 'upstream/master'"
This reverts commit 3c2916e30ba16e987fa53671a7ed6cd4407236f3, reversing
changes made to 8bc47fc35f932674100185e834bfb419c9879696.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ markdown
 langchain
 langchain_community
 langchain-openai
+
 tiktoken
 gpt-researcher
 arxiv
@@ -28,7 +29,7 @@ unstructured
 json_repair
 json5
 loguru
-langgraph
+langgraph==0.2.76
 
 # uncomment for testing
 # pytest
